Add jmacro-dist module, refactor installer and cli