@@ -105,380 +105,7 @@
                     </systemProperties>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>appassembler-maven-plugin</artifactId>
-                <version>2.1.0</version>
-                <executions>
-                    <execution>
-                        <id>appassembler</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>assemble</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <programs>
-                        <program>
-                            <mainClass>com.itquasar.multiverse.jmacro.cli.Launcher</mainClass>
-                            <id>jmacro-cli</id>
-                        </program>
-                    </programs>
-                    <unixScriptTemplate>${basedir}/src/main/appassembler/unixBinTemplate.sh</unixScriptTemplate>
-                    <windowsScriptTemplate>${basedir}/src/main/appassembler/windowsBinTemplate.bat</windowsScriptTemplate>
-                    <environmentSetupFileName>setup-env</environmentSetupFileName>
-                    <configurationSourceDirectory>src/main/config</configurationSourceDirectory>
-                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
-                    <configurationDirectory>etc</configurationDirectory>
-                    <logsDirectory>logs</logsDirectory>
-                    <repositoryLayout>flat</repositoryLayout>
-                    <repositoryName>lib</repositoryName>
-                    <tempDirectory>tmp</tempDirectory>
-                    <showConsoleWindow>true</showConsoleWindow>
-                    <useWildcardClassPath>true</useWildcardClassPath>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.2.0</version>
-                <executions>
-                    <execution>
-                        <id>copy</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <artifactItems>
-                        <artifactItem>
-                            <groupId>xyz.cofe</groupId>
-                            <artifactId>jacob</artifactId>
-                            <version>1.20</version>
-                            <classifier>x86</classifier>
-                            <type>dll</type>
-                        </artifactItem>
-                        <artifactItem>
-                            <groupId>xyz.cofe</groupId>
-                            <artifactId>jacob</artifactId>
-                            <version>1.20</version>
-                            <classifier>x64</classifier>
-                            <type>dll</type>
-                        </artifactItem>
-                    </artifactItems>
-                    <outputDirectory>${project.build.directory}/appassembler/bin</outputDirectory>
-                    <overWriteReleases>true</overWriteReleases>
-                    <overWriteSnapshots>true</overWriteSnapshots>
-                </configuration>
-            </plugin>
 
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.2.0</version>
-                <executions>
-                    <execution>
-                        <id>copy-scripts-bin</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${basedir}/target/appassembler/bin</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${basedir}/src/main/scripts/bin</directory>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>data</id>
-            <activation>
-                <file>
-                    <missing>${basedir}/target/appassembler/data</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <version>3.2.0</version>
-                        <executions>
-                            <execution>
-                                <!-- Copy data dir with data files for tools or commands -->
-                                <id>copy-data</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${basedir}/target/appassembler/data</outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>${basedir}/../data</directory>
-                                        </resource>
-                                    </resources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>jmacro-scripts</id>
-            <activation>
-                <file>
-                    <missing>${basedir}/target/appassembler/scripts</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <version>3.2.0</version>
-                        <executions>
-                            <execution>
-                                <!-- Copy tools dir with binaries -->
-                                <id>copy-jmacro-scripts</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${basedir}/target/appassembler/scripts</outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>${basedir}/../jmacro-scripts</directory>
-                                        </resource>
-                                    </resources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>tools</id>
-            <activation>
-                <file>
-                    <missing>${basedir}/target/appassembler/tools</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <version>3.2.0</version>
-                        <executions>
-                            <execution>
-                                <!-- Copy tools dir with binaries -->
-                                <id>copy-tools</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${basedir}/target/appassembler/tools</outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>${basedir}/../tools</directory>
-                                        </resource>
-                                    </resources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java-embedded</id>
-            <activation>
-                <file>
-                    <missing>${project.build.directory}/appassembler/java/release</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.igormaznitsa</groupId>
-                        <artifactId>mvn-jlink-wrapper</artifactId>
-                        <version>1.1.0</version>
-                        <executions>
-                            <execution>
-                                <id>jlink-full</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>jlink</goal>
-                                </goals>
-                                <configuration>
-                                    <provider>LOCAL</provider>
-                                    <output>${project.build.directory}/appassembler/java</output>
-                                    <modulePaths>
-                                        <path>${java.home}${file.separator}jmods</path>
-                                    </modulePaths>
-                                    <options>
-                                        <option>--add-modules</option>
-                                        <option>
-                                            java.base,java.se,jdk.attach,jdk.charsets,jdk.crypto.cryptoki,jdk.crypto.ec,jdk.crypto.mscapi,jdk.jdi,jdk.jdwp.agent,jdk.jsobject,jdk.localedata,jdk.management.agent,jdk.management.jfr,jdk.management,jdk.naming.dns,jdk.net,jdk.sctp,jdk.security.auth,jdk.security.jgss,jdk.unsupported,jdk.xml.dom,jdk.zipfs
-                                        </option>
-                                        <option>--compress=2</option>
-                                        <option>--no-header-files</option>
-                                        <option>--no-man-pages</option>
-                                        <option>--strip-debug</option>
-                                    </options>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>launcher</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <os>
-                    <family>windows</family>
-                </os>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <version>3.3.0</version>
-                        <executions>
-                            <execution>
-                                <id>exe-copy-icon</id>
-                                <phase>process-resources</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${project.basedir}/../git-modules/knx-launcher/src/mingwX64Main/resources/
-                                    </outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>${project.basedir}/../src/resources/</directory>
-                                            <includes>
-                                                <include>icon.ico</include>
-                                            </includes>
-                                            <filtering>false</filtering>
-                                        </resource>
-                                        <resource>
-                                            <directory>${project.basedir}/src/main/knx-launcher/</directory>
-                                            <includes>
-                                                <include>knx-launcher.*</include>
-                                            </includes>
-                                            <filtering>true</filtering>
-                                        </resource>
-                                    </resources>
-                                    <overwrite>true</overwrite>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <version>3.1.0</version>
-                        <configuration>
-                            <executable>cmd</executable>
-                            <workingDirectory>${project.basedir}/../git-modules/knx-launcher</workingDirectory>
-                            <useMavenLogger>true</useMavenLogger>
-                            <environmentVariables>
-                                <KNX_EXE_NAME>jmacro</KNX_EXE_NAME>
-                            </environmentVariables>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>exe-build-launcher</id>
-                                <phase>compile</phase>
-                                <goals>
-                                    <goal>exec</goal>
-                                </goals>
-                                <configuration>
-                                    <arguments>
-                                        <argument>/C</argument>
-                                        <argument>${project.basedir}/../git-modules/knx-launcher/gradlew.bat</argument>
-                                        <argument>nativeBinaries</argument>
-                                    </arguments>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>exe-clean-launcher</id>
-                                <phase>clean</phase>
-                                <goals>
-                                    <goal>exec</goal>
-                                </goals>
-                                <configuration>
-                                    <arguments>
-                                        <argument>/C</argument>
-                                        <argument>${project.basedir}/../git-modules/knx-launcher/gradlew.bat</argument>
-                                        <argument>clean</argument>
-                                    </arguments>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <version>3.3.0</version>
-                        <executions>
-                            <execution>
-                                <id>exe-copy-launcher</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${project.basedir}/target/appassembler/</outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>
-                                                ${project.basedir}/../git-modules/knx-launcher/build/bin/native/knxLauncherReleaseExecutable/
-                                            </directory>
-                                            <includes>
-                                                <include>jmacro.exe</include>
-                                            </includes>
-                                            <filtering>false</filtering>
-                                        </resource>
-                                        <resource>
-                                            <directory>
-                                                ${project.basedir}/../git-modules/knx-launcher/build/bin/native/knxLauncherDebugExecutable/
-                                            </directory>
-                                            <includes>
-                                                <include>jmacro_debug_.exe</include>
-                                            </includes>
-                                            <filtering>false</filtering>
-                                        </resource>
-                                        <resource>
-                                            <directory>${project.basedir}/src/main/knx-launcher/</directory>
-                                            <includes>
-                                                <include>*.knx</include>
-                                            </includes>
-                                            <filtering>false</filtering>
-                                        </resource>
-                                    </resources>
-                                    <overwrite>true</overwrite>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
