@@ -48,99 +48,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>appassembler-maven-plugin</artifactId>
-                <version>2.1.0</version>
-                <executions>
-                    <execution>
-                        <id>appassembler</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>assemble</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <programs>
-                        <program>
-                            <mainClass>com.itquasar.multiverse.jmacro.installer.Launcher</mainClass>
-                            <id>jmacro-installer</id>
-                        </program>
-                    </programs>
-                    <environmentSetupFileName>setup-env</environmentSetupFileName>
-                    <configurationSourceDirectory>src/main/config</configurationSourceDirectory>
-                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
-                    <configurationDirectory>etc</configurationDirectory>
-                    <!--logsDirectory>logs</logsDirectory-->
-                    <repositoryLayout>flat</repositoryLayout>
-                    <repositoryName>lib</repositoryName>
-                    <!--tempDirectory>tmp</tempDirectory-->
-                    <showConsoleWindow>true</showConsoleWindow>
-                    <useWildcardClassPath>true</useWildcardClassPath>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.2.0</version>
-                <executions>
-                    <execution>
-                        <id>copy-scripts-bin</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${basedir}/target/appassembler/bin</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${basedir}/src/main/scripts/bin</directory>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>java-embedded</id>
-            <activation>
-                <file>
-                    <missing>${project.build.directory}/appassembler/java/release</missing>
-                </file>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.igormaznitsa</groupId>
-                        <artifactId>mvn-jlink-wrapper</artifactId>
-                        <version>1.1.0</version>
-                        <executions>
-                            <execution>
-                                <id>jlink-full</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>jlink</goal>
-                                </goals>
-                                <configuration>
-                                    <provider>LOCAL</provider>
-                                    <output>${project.build.directory}/appassembler/java</output>
-                                    <options>
-                                        <option>--add-modules</option>
-                                        <option>java.base,java.logging,java.xml,jdk.zipfs</option>
-                                        <option>--compress=2</option>
-                                        <option>--no-header-files</option>
-                                        <option>--no-man-pages</option>
-                                        <option>--strip-debug</option>
-                                    </options>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
